istio-scenarios/istio-setup/namespace-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-mesh
  labels:
    istio-injection: enabled
