istio-scenarios/istio-setup/root-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retail-root
  namespace: retail-mesh
spec:
  hosts:
  - "*"
  gateways:
  - retail-gateway
  http:
  - match:
    - uri:
        prefix: /api/order
    - uri:
        prefix: /place-order
    route:
    - destination:
        host: order-service
        port:
          number: 5000
  - match:
    - uri:
        prefix: /admin
    - uri:
        prefix: /api/dashboard
    route:
    - destination:
        host: admin-frontend
        port:
          number: 8000
  - route:
    - destination:
        host: frontend
        port:
          number: 3000
